# out_of_box_demo

./: .cproject  .gitignore  .project  .projectlinkstore  out_of_box_demo.pintool  out_of_box_demo.slcp  out_of_box_demo.slpb  out_of_box_demo.slps
GNU ARM v12.2.1 - Default/: makefile  out_of_box_demo.ld  sources.mk  subdir.mk
GNU ARM v12.2.1 - Default/autogen/: subdir.mk
autogen/: gen.properties  linkerfile_SoC.ld  sl_component_catalog.h  sl_event_handler.c
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
config/: aws_iot_config.h  pin_config.h  sl_si91x_memlcd_config.h  sl_si91x_power_manager_config_1.h
iotcore/: stdkconfig.cmake
out_of_box_demo_cmake/: CMakeLists.txt  CMakePresets.json  out_of_box_demo.cmake  toolchain.cmake
